--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 id="head_title">MY PROFILE</h1>
     <h2>Suphanut Ngamgetsook</h2>
-    <img src="c:\Users\User\Downloads\IMG_4322.jpeg" alt="My photo" width="300">
+    <img src="./images/IMG_4322.jpeg" alt="My photo" width="300">
     <div class="profile">
         <p>Nickname: North  age: 18</p>
         <p>IT KMITL</p>
